--- a/tutorial.html
+++ b/tutorial.html
@@ -118,13 +118,13 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Shiny Tutorial</h1>
 <h4 class="author"><em>Mark Dunning</em></h4>
-<h4 class="date"><em>Last modified: 02 Aug 2017</em></h4>
+<h4 class="date"><em>Last modified: 03 Aug 2017</em></h4>
 
 </div>
 
 
-<div id="section-using-shiny-to-make-genomics-datasets-more-accessible" class="section level1">
-<h1>Using Shiny to make genomics datasets more accessible</h1>
+<div id="section-an-introduction-to-shiny" class="section level1">
+<h1>An Introduction to Shiny</h1>
 <div id="section-r-packages" class="section level2">
 <h2>R packages</h2>
 <p>You will need the following R packages to run this tutorial</p>
@@ -135,7 +135,7 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
 <div id="section-references" class="section level2">
 <h2>References</h2>
 <ul>
-<li>Shout-out to Monash Bioinformatics Platform for making their course notes available:- <a href="https://monashbioinformaticsplatform.github.io/2016-11-03-r-shiny/">LINK</a></li>
+<li>Shout-out to Monash Bioinformatics Platform for making their <a href="https://monashbioinformaticsplatform.github.io/2016-11-03-r-shiny/">course notes available</a> 👍</li>
 <li>Rstudio have a good collection of <a href="http://shiny.rstudio.com/tutorial/">tutorial videos</a></li>
 <li>The <a href="https://www.rstudio.com/products/shiny/shiny-user-showcase/">Shiny showcase</a></li>
 <li>A <a href="http://shiny.rstudio.com/articles/cheatsheet.html">Shiny cheatsheet</a> to print off and pin to your desk</li>
@@ -166,9 +166,9 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
 <h1>First look at a Shiny app</h1>
 <p>Create a new app with the following menus (call it <code>test</code> or something)</p>
 <p><strong>File</strong> -&gt; <strong>New File</strong> -&gt; <strong>Shiny web app</strong></p>
-<p>A file called <code>app.R</code> should appear in RStudio. This R script defines the UI (user interface), code run by the server and ends with an instruction to run the app. Note that you might see some older Shiny apps that were defined in two separate files (<code>UI.R</code> and <code>server.R</code>). If you view this file in RStudio the option to run the app will appear in the toolbar. Hitting the <strong>Run App</strong> Button will create a new RStudio window this example app. Congratulations, you have just created your first shiny app 🎉</p>
-<p>You could also view in a web browser.</p>
-<iframe data-deferred-src="app4a2432f4ee489cdc569c366f262b25ed/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
+<p>A file called <code>app.R</code> should appear in RStudiom and RStudio will have created a new directory with the app name that you specified (e.g. <code>test</code>). The <code>app.R</code> script defines the UI (user interface), app layout, code run by the server and ends with an instruction to run the app. Note that you might see some older Shiny apps that were defined in two separate files (<code>UI.R</code> and <code>server.R</code>). If you view this file in RStudio the option to run the app will appear in the top toolbar. Hitting the <strong>Run App</strong> Button will create a new RStudio window this example app. Congratulations, you have just created your first shiny app 🎉</p>
+<p>You could also view in a web browser. Please note that when presented “live” the Shiny app will appear below. On the static HTML pages linked from the course website, there will be <em>grey box</em> below.</p>
+<iframe data-deferred-src="appce859741ecac8e7387f94de459fe0325/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
 <p>In this example app we are creating a histogram of a pre-defined dataset (<code>faithful</code>), with the user being able to specify how many bins to use in the histogram. Let’s first look at the part of the script that defines the interface.</p>
 <pre class="r"><code>ui &lt;- fluidPage(
    
@@ -192,16 +192,18 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
    )
 )</code></pre>
 <ul>
+<li>There are two panels in the app layout; defined by the <code>sidebarPanel</code> and <code>mainPanel</code> arguments respectively</li>
 <li>The UI part of the script defines an argument <code>bins</code> that is used to define the parameters of how the histogram is displayed. This is the basic principle of Shiny.</li>
 <li>A slider bar is used to choose a different value of <code>bins</code>, and this value can be accessed as <code>input$bins</code> from within in the <code>server</code> function (see later).</li>
 </ul>
 <div id="section-html-and-other-formatting" class="section level2">
 <h2>HTML and other formatting</h2>
-<p>You can add other text to the sidebar in order to provide explanations and help to your app. HTML elements can be added by a number of functions that parallel common HTML tags. e.g. <code>h1</code>, <code>h2</code> for headers and <code>a</code> to create a hyperlink. The <code>helpText</code> function can also be used to add explanatory text below a particular input option. In the following code we add headers, some help text and a hyperlink to a reference about histograms. Images can also be added using the <code>img</code> function.</p>
+<p>TML elements can be added by a number of functions that parallel common HTML tags. e.g. <code>h1</code>, <code>h2</code> for headers and <code>a</code> to create a hyperlink. The <code>helpText</code> function can also be used to add explanatory text below a particular input option. In the following code we add headers, some help text and a hyperlink to a reference about histograms. Images can also be added using the <code>img</code> function.</p>
+<p>You can try copy-and-pasting this code over the default <code>sidebarPanel</code> function call in the <code>app.R</code> file you have created.</p>
 <pre class="r"><code>      ######
       sidebarPanel(
 
-        h1(&quot;Data  Exploration&quot;),
+        h1(&quot;Data  Exploration Options&quot;),
         h2(&quot;The histogram&quot;),
          sliderInput(&quot;bins&quot;,
                      &quot;Number of bins:&quot;,
@@ -215,11 +217,11 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
         img(src=&quot;http://www.cruk.cam.ac.uk/sites/all/themes/cambridge_theme/images/interface/main-logo-small.png&quot;)
       ),
       ######</code></pre>
-<iframe data-deferred-src="appdfa3ab991a1d0e912aa32738fb4ca025/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
+<iframe data-deferred-src="appd4df338bb3f7e280fec62e84feb6a98b/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
 </div>
 <div id="section-inputs" class="section level2">
 <h2>Inputs</h2>
-<p>This histogram example uses the <code>sliderInput</code> function which allows the user to select a numeric value between some lower and upper bound. When faced with new R functions it is usually a good idea to read the help page; <code>?sliderInput</code>. We also have control over the amount by which the values change when the user slides the bar with <code>step</code> and the text label displayed above the bar.</p>
+<p>This histogram example uses the <code>sliderInput</code> function which allows the user to select a numeric value for the number of <em>bins</em> to allocate the data to between some lower and upper bound. We also have control over the amount by which the values change when the user slides the bar with <code>step</code>, and the text label displayed above the bar. (See <code>?sliderInput</code> for details).</p>
 <p>Other types of input are available for us to choose from and follow a similar syntax. i.e. each type of input has a <code>value</code> and <code>label</code> argument</p>
 <ul>
 <li><code>selectInput</code>
@@ -247,7 +249,7 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
 <li>special input to upload a file</li>
 </ul></li>
 </ul>
-<p>To add an extra input, we need to add it as an argument to the <code>sidebarPanel</code> function. We could do this using a <code>radioButton</code>. The order of the arguments to <code>sidebarPanel</code> dictates the order in which the various elements are rendered in the HTML.</p>
+<p>To add an extra input option, we need to add it as an argument to the <code>sidebarPanel</code> function. We could add a option to colour the histogram using the <code>radioButton</code> function. The order of the arguments to <code>sidebarPanel</code> dictates the order in which the various elements are rendered in the HTML.</p>
 <pre class="r"><code>      ######
       sidebarPanel(
 
@@ -279,7 +281,7 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
       hist(x, breaks = bins, col = input$colour, border = 'white')
    })
 }</code></pre>
-<iframe data-deferred-src="app90c13025ad5c631f76391f8caca715bf/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
+<iframe data-deferred-src="app6b10a7e0c269c1a3a28e4d00b1f91aa2/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
 <p>Note, that the capatilisation of the colours is important in the definition of the <code>radioInput</code>, as <code>red</code>, <code>green</code> and <code>blue</code> are all valid colours in R, whereas <code>Red</code> is not. If you wanted the names of the colours to be displayed nicer in the UI, you can change the <code>Choices</code> vector.</p>
 <pre class="r"><code>        radioButtons(&quot;colour&quot;,&quot;Colour of histogram&quot;,choices=c(&quot;Red&quot;,&quot;Green&quot;,&quot;Blue&quot;),selected=&quot;Red&quot;),</code></pre>
 <p>However, as these are not valid names of colours in R, we need to do some extra processing before we can call the <code>hist</code> function. We can access the value of <code>input$colour</code> and modify accordingly. For example, we could use the <code>tolower</code> function to convert to lower case.</p>
@@ -304,7 +306,7 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
     mycolour &lt;- &quot;red&quot;
   }
   hist(x, breaks = bins, col = mycolour, border = 'white')</code></pre>
-<iframe data-deferred-src="app875bc84372b9fc127886f2b16925375e/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
+<iframe data-deferred-src="appde4e1b075a6a3e18003ad36d6031a793/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
 </div>
 <div id="section-exercises" class="section level2">
 <h2>Exercises</h2>
@@ -313,13 +315,12 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
 <ul>
 <li>HINT: the <code>main</code> argument to the <code>hist</code> function lets you set the plot title.</li>
 </ul></li>
-<li>The choice of red, green or blue is somewhat limiting. Create a dropdown box to allow the user to choose from any of the pre-defined colours in R. (HINT: the function <code>colours</code> returns the names of all valid colours as a vector)</li>
+<li>The choice of red, green or blue is somewhat limiting. Create a dropdown box (<code>selectInput</code>) to allow the user to choose from any of the pre-defined colours in R. (HINT: the function <code>colours</code> returns the names of all valid colours as a vector)</li>
 <li>OPTIONAL:- use <code>numericInput</code> boxes to allow the user to define a colour using its red, green and blue values.
 <ul>
 <li>the <code>rgb</code> function will convert a set of numeric values into a hexademical string that can be used as an argument for plotting.</li>
 <li>the RGB value for red is <code>255,0,0</code></li>
 </ul></li>
-<li>create a tickbox to switch between specifying colour by name or rgb values.</li>
 </ul>
 </div>
 <div id="section-outputs" class="section level2">
@@ -332,8 +333,8 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
       )
    )
 )</code></pre>
-<p>We then need to modify the server script to create the <code>boxPlot</code> object that we want to display. Having already created a histogram, we should just need a function that runs the command <code>boxplot(x)</code>.</p>
-<p>However, the following code is incorrect. Can you work out why?</p>
+<p>We then need to modify the server script to create the <code>boxPlot</code> object that we want to display. Having already created a histogram, we should just need a function that runs the command <code>boxplot(x)</code> and assigns the value to <code>output$boxPlot</code>.</p>
+<p>However, the following code is incorrect. Can you work out why? 🤔</p>
 <pre class="r"><code>server &lt;- function(input, output) {
    
    output$distPlot &lt;- renderPlot({
@@ -353,7 +354,7 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
 
    })
 }</code></pre>
-<iframe data-deferred-src="app5e5c4343cba872a8fbaf93828964b3c7/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
+<iframe data-deferred-src="appf42af91140d1dc3889c6ffdc3fc915cb/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
 <p>Aside from a plot, other types of output include</p>
 <ul>
 <li><code>renderText</code></li>
@@ -368,9 +369,7 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
          plotOutput(&quot;distPlot&quot;),
          verbatimTextOutput(&quot;summary&quot;),
          plotOutput(&quot;boxPlot&quot;)
-      )
-   )
-)</code></pre>
+      )</code></pre>
 <p>In the <code>server</code> function we include the code to compute the relevant outputs. Note that in the first line of the function we define our vector <code>x</code> so that it is visible to all output functions. It probably wouldn’t be an issue with this small example, but for larger datasets we really only want to create the dataset once and be able to access it from all output functions. However, this means that the dataset cannot be modified once the app has started. If we wanted data that can be updated, we would have to use another approach that we will describe in the next section.</p>
 <pre class="r"><code>server &lt;- function(input, output) {
      x    &lt;- faithful[, 2] 
@@ -401,7 +400,18 @@ biocLite(&quot;breastCancerNKI&quot;)</code></pre>
      
    })
 }</code></pre>
-<iframe data-deferred-src="app20f8d2fc885486dfbe8ea1a6349a526c/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
+<p>The results panel is now getting a bit cluttered. If we wish we could change the layout so each distinct output is displayed in a different panel. This can be done with the <code>tabsetPanel</code> function.</p>
+<pre class="r"><code>      mainPanel(
+        tabsetPanel(
+          tabPanel(&quot;Bins&quot;, textOutput(&quot;chosenBins&quot;)),
+          tabPanel(&quot;Histogram&quot;,plotOutput(&quot;distPlot&quot;)),
+          tabPanel(&quot;Summary&quot;, verbatimTextOutput(&quot;summary&quot;)),
+          tabPanel(&quot;Boxplot&quot;, plotOutput(&quot;boxPlot&quot;))
+          
+        )
+
+      )</code></pre>
+<iframe data-deferred-src="appfdf4b6500da114b410175a93e3b93d32/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
 </div>
 </div>
 
